--- a/source/index.html
+++ b/source/index.html
@@ -36,9 +36,9 @@
               Групповые занятия
               Кардио-зона</p>
             <p class="promo-info__promo-title">Фитнес центр</p>
-            <button class="button button--button-secondary promo-info__button" tabindex="-1">
-              <a class="button-link button-link--secondary promo-info__button-link" href="#prices">Купить абонемент</a>
-            </button>
+            <a class="button button--button-secondary promo-info__button" href="#prices">
+              Купить абонемент
+            </a>
           </div>
           <div class="promo__picture-wrapper">
             <picture>
@@ -114,9 +114,9 @@
                 <span class="price-card__price-shadow" aria-hidden="true" data-service="coach">5000</span>
                 <span class="price-card__price" data-service="coach">5000</span>
               </div>
-              <button class="price-card__buy-button button button--button-primary" tabindex="-1" disabled>
-                <a class="price-card__buy-link button-link button-link--primary" href="#">Купить абонемент</a>
-              </button>
+              <a class="price-card__buy-button button button--button-primary button--button-primary-disabled" href="#" disabled>
+                Купить абонемент
+              </a>
             </div>
           </li>
           <li class="price-cards__price-card price-card">
@@ -127,9 +127,9 @@
                 <span class="price-card__price-shadow" aria-hidden="true" data-service="day">1700</span>
                 <span class="price-card__price" data-service="day">1700</span>
               </div>
-              <button class="price-card__buy-button button button--button-primary" tabindex="-1">
-                <a class="price-card__buy-link button-link button-link--primary" href="#">Купить абонемент</a>
-              </button>
+              <a class="price-card__buy-button button button--button-primary" href="#">
+                Купить абонемент
+              </a>
             </div>
           </li>
           <li class="price-cards__price-card price-card">
@@ -140,9 +140,9 @@
                 <span class="price-card__price-shadow" aria-hidden="true" data-service="full-day">2700</span>
                 <span class="price-card__price" data-service="full-day">2700</span>
               </div>
-              <button class="price-card__buy-button button button--button-primary" tabindex="-1">
-                <a class="price-card__buy-link button-link button-link--primary price-card__buy-link--is-focused" href="#">Купить абонемент</a>
-              </button>
+              <a class="price-card__buy-button button button--button-primary" href="#">
+                Купить абонемент
+              </a>
             </div>
           </li>
         </ul>
@@ -441,21 +441,21 @@
             </div>
           </li>
           <li class="offers-list__offer offers-list__offer--aside offer">
-            <div class="offer_content-wrapper">
+            <div class="offer__content-wrapper offer__content-wrapper--aside">
               <div>
                 <h3>Месяц бесплатно</h3>
                 <p>Приведи друга, получи абонемент в подарок</p>
               </div>
-              <a class="offer__offer-link offer-link" href="#">подробнее</a>
+              <a class="offer__offer-link offer-link offer-link--aside" href="#">подробнее</a>
             </div>
           </li>
           <li class="offers-list__offer offers-list__offer--aside offer">
-            <div class="offer_content-wrapper">
+            <div class="offer__content-wrapper offer__content-wrapper--aside">
               <div>
                 <h3>Скидка 20%</h3>
                 <p>Корпоративный фитнес с командой</p>
               </div>
-              <a class="offer__offer-link offer-link" href="#">подробнее</a>
+              <a class="offer__offer-link offer-link offer-link--aside" href="#">подробнее</a>
             </div>
           </li>
         </ul>
