--- a/source/index.html
+++ b/source/index.html
@@ -461,7 +461,104 @@
         </ul>
       </div>
     </section>
-    <div data-test="offers">offers</div>
+    <section class="page__faq faq">
+      <div class="container faq__faq-wrapper">
+        <h2 class="faq__title section-title">Вопросы и ответы</h2>
+        <ul class="faq__faq-tabs faq-tabs">
+          <li class="faq__faq-tab faq-tab">
+            <button class="faq-tab__button faq-tab__button--active" type="button" id="center">Центр</button>
+          </li>
+          <li class="faq__faq-tab faq-tab">
+            <button class="faq-tab__button" type="button" id="subscription">Абонемент</button>
+          </li>
+          <li class="faq__faq-tab faq-tab">
+            <button class="faq-tab__button" type="button" id="services">Услуги</button>
+          </li>
+          <li class="faq__faq-tab faq-tab">
+            <button class="faq-tab__button" type="button" id="rules">Правила</button>
+          </li>
+        </ul>
+        <ul class="faq__faq-accordeon faq-accordeon">
+          <li class="faq-accordeon__accordeon-item accordeon-item">
+            <div class="accordeon-item__content accordeon-item__content--is-visible" id="center">
+              <h3>Как стать членом фитнес-центра?</h3>
+              <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
+            </div>
+            <div class="accordeon-item__content" id="subscription">
+              <h3> Какие виды абонементов доступны?</h3>
+              <p> Доступны разовые, недельные, месячные и годовые абонементы.</p>
+            </div>
+            <div class="accordeon-item__content" id="services">
+              <h3>Какие тренировки предлагаются?</h3>
+              <p>У нас есть занятия по йоге, пилатесу, силовым тренировкам и кардио.</p>
+            </div>
+            <div class="accordeon-item__content" id="rules">
+              <h3>Каковы правила пользования залом?</h3>
+              <p> Необходимо соблюдать чистоту и использовать специальную обувь.</p>
+            </div>
+            <button class="accordeon-item__open-button
+            " type="button"></button>
+          </li>
+          <li class="faq-accordeon__accordeon-item accordeon-item">
+            <div class="accordeon-item__content accordeon-item__content--is-visible" id="center">
+              <h3>Где можно посмотреть расписание?</h3>
+              <p>Расписание доступно на сайте клуба в разделе "Услуги", а также в мобильном приложении.</p>
+            </div>
+            <div class="accordeon-item__content" id="subscription">
+              <h3>Как стать членом фитнес-центра?</h3>
+              <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
+            </div>
+            <div class="accordeon-item__content" id="services">
+              <h3>Есть ли услуги персонального тренера?</h3>
+              <p>Да, можно записаться на индивидуальные тренировки с персональным тренером.</p>
+            </div>
+            <div class="accordeon-item__content" id="rules">
+              <h3>Можно ли приводить гостей?</h3>
+              <p> Да, посетители могут привести одного гостя с предварительной регистрацией.</p>
+            </div>
+            <button class="accordeon-item__open-button" type="button"></button>
+          </li>
+          <li class="faq-accordeon__accordeon-item accordeon-item">
+            <div class="accordeon-item__content accordeon-item__content--is-visible" id="center">
+              <h3>Есть кулеры в центре? Предоставляются полотенца?</h3>
+              <p>Всё необходимое предоставляется и входит в цену.</p>
+            </div>
+            <div class="accordeon-item__content" id="subscription">
+              <h3>Как стать членом фитнес-центра?</h3>
+              <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
+            </div>
+            <div class="accordeon-item__content" id="services">
+              <h3>Какие спа-услуги доступны?</h3>
+              <p>Мы предлагаем массаж, сауну и джакузи.</p>
+            </div>
+            <div class="accordeon-item__content" id="rules">
+              <h3>Каковы правила отмены бронирования?</h3>
+              <p>Отмена должна быть произведена не менее чем за 12 часов до занятия.</p>
+            </div>
+            <button class="accordeon-item__open-button" type="button"></button>
+          </li>
+          <li class="faq-accordeon__accordeon-item accordeon-item">
+            <div class="accordeon-item__content accordeon-item__content--is-visible" id="center">
+              <h3>Сколько тренеров работает в клубе и какова их квалификация?</h3>
+              <p>У Нас работате полный штат квалифицированных специалистов, многие из которых мастера спорта.</p>
+            </div>
+            <div class="accordeon-item__content" id="subscription">
+              <h3>Как продлить абонемент?</h3>
+              <p>Продлить абонемент можно онлайн или на ресепшне.</p>
+            </div>
+            <div class="accordeon-item__content" id="services">
+              <h3> Доступен ли бассейн?</h3>
+              <p>Бассейн доступен всем клиентам с любого типа абонементом.</p>
+            </div>
+            <div class="accordeon-item__content" id="rules">
+              <h3>Есть ли возрастные ограничения?</h3>
+              <p>Дети до 16 лет допускаются только в сопровождении взрослых.</p>
+            </div>
+            <button class="accordeon-item__open-button" type="button"></button>
+          </li>
+        </ul>
+      </div>
+    </section>
     <div data-test="faq">faq</div>
     <div data-test="reviews">reviews</div>
     <div data-test="form">form</div>
