working faq tabs and accordeon

--- a/source/index.html
+++ b/source/index.html
@@ -480,7 +480,7 @@
         </ul>
         <ul class="faq__faq-accordeon faq-accordeon">
           <li class="faq-accordeon__accordeon-item accordeon-item">
-            <div class="accordeon-item__content accordeon-item__content--is-visible" id="center">
+            <div class="accordeon-item__content accordeon-item__content--active accordeon-item__content--is-visible" id="center">
               <h3>Как стать членом фитнес-центра?</h3>
               <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
             </div>
@@ -496,7 +496,7 @@
               <h3>Каковы правила пользования залом?</h3>
               <p> Необходимо соблюдать чистоту и использовать специальную обувь.</p>
             </div>
-            <button class="accordeon-item__open-button
+            <button class="accordeon-item__open-button accordeon-item__open-button--active
             " type="button"></button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
