--- a/source/index.html
+++ b/source/index.html
@@ -494,7 +494,7 @@
               <p> Необходимо соблюдать чистоту и использовать специальную обувь.</p>
             </div>
             <button class="accordeon-item__open-button accordeon-item__open-button--active
-            " type="button"></button>
+            " type="button" data-id="1"></button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
             <div class="accordeon-item__content accordeon-item__content--is-visible" data-id="center">
@@ -513,7 +513,7 @@
               <h3>Можно ли приводить гостей?</h3>
               <p> Да, посетители могут привести одного гостя с предварительной регистрацией.</p>
             </div>
-            <button class="accordeon-item__open-button" type="button"></button>
+            <button class="accordeon-item__open-button" type="button" data-id="2"></button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
             <div class="accordeon-item__content accordeon-item__content--is-visible" data-id="center">
@@ -532,7 +532,7 @@
               <h3>Каковы правила отмены бронирования?</h3>
               <p>Отмена должна быть произведена не менее чем за 12 часов до занятия.</p>
             </div>
-            <button class="accordeon-item__open-button" type="button"></button>
+            <button class="accordeon-item__open-button" type="button" data-id="3"></button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
             <div class="accordeon-item__content accordeon-item__content--is-visible" data-id="center">
@@ -551,7 +551,7 @@
               <h3>Есть ли возрастные ограничения?</h3>
               <p>Дети до 16 лет допускаются только в сопровождении взрослых.</p>
             </div>
-            <button class="accordeon-item__open-button" type="button"></button>
+            <button class="accordeon-item__open-button" type="button" data-id="4"></button>
           </li>
         </ul>
       </div>
