fixed overflow issues

--- a/source/index.html
+++ b/source/index.html
@@ -111,8 +111,7 @@
               <h3 class="price-card__title">С тренером</h3>
               <p class="price-card__description">12 занятий</p>
               <div class="price-card__price-wrapper">
-                <span class="price-card__price-shadow" aria-hidden="true" data-service="coach">5000</span>
-                <span class="price-card__price" data-service="coach">5000</span>
+                <span class="price-card__price" data-service="coach" data-shadow="5000">5000</span>
               </div>
               <a class="price-card__buy-button button button--button-primary" href="#">
                 Купить абонемент
@@ -124,8 +123,7 @@
               <h3 class="price-card__title">Дневной</h3>
               <p class="price-card__description">с 8:00 до 17:00</p>
               <div class="price-card__price-wrapper">
-                <span class="price-card__price-shadow" aria-hidden="true" data-service="day">1700</span>
-                <span class="price-card__price" data-service="day">1700</span>
+                <span class="price-card__price" data-service="day" data-shadow="1700">1700</span>
               </div>
               <a class="price-card__buy-button button button--button-primary" href="#">
                 Купить абонемент
@@ -137,8 +135,7 @@
               <h3 class="price-card__title">Полный день</h3>
               <p class="price-card__description">с 8:00 до 22:00</p>
               <div class="price-card__price-wrapper">
-                <span class="price-card__price-shadow" aria-hidden="true" data-service="full-day">2700</span>
-                <span class="price-card__price" data-service="full-day">2700</span>
+                <span class="price-card__price" data-service="full-day" data-shadow="2700">2700</span>
               </div>
               <a class="price-card__buy-button button button--button-primary" href="#">
                 Купить абонемент
@@ -225,10 +222,10 @@
                     <img class="juri__swiper-slide-image" src="./img/juri/juri-3@1x.jpg" srcset="./img/juri/juri-3@2x.jpg 2x" width="260" height="300" alt="Член жюри.">
                   </picture>
                 </div>
-                <div class="juri__swiper`-slide-content-wrapper">
+                <div class="juri__swiper-slide-content-wrapper">
                   <h3 class="juri__swiper-slide-header">Виталий Петров</h3>
                   <div class="juri__swiper-slide-overlay">
-                    <p class="juri__swiper-slide-genre">Personal Trainer</p>
+                    <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
                       <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
@@ -643,6 +640,7 @@
       </div>
     </section>
     <section class="page__footer footer" data-test="footer">
+      <h2 class="visually-hidden">Навигация и соц-сети.</h2>
       <div class="container container--full-width footer__footer-wrapper">
         <div class="footer__logo-wrapper">
           <picture>
